--- a/src/pages/houses/convenient/convenientStyle.css
+++ b/src/pages/houses/convenient/convenientStyle.css
@@ -8,3 +8,9 @@
     margin-bottom: 80px;
     height: auto !important;
 }
+.convenient{
+    margin-left: 6rem !important;
+}
+.h3-convenient{
+    color: orangered;
+}
